Kubernetes/kind/oauth2-proxy/oauth2-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - auth.int.mydomain.com
      secretName: oauth2-proxy-https-cert
  rules:
    - host: auth.int.mydomain.com
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: http
